src/test/deca/syntax/invalid/resultats/test_print_syntax_error-synt.res
./src/test/deca/syntax/invalid/test_print_syntax_error.deca:10:18: mismatched input ';' expecting {INT, '-', 'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '(', '!', FLOAT, STRING}
